# record-type

./: .gitignore  pyproject.toml  records.py
benchmarks/: bench_attrs.py  bench_dataclass.py  bench_dataclasses.py  bench_msgspec.py  bench_namedtuple.py  bench_namedtuples.py  bench_record.py  perf_importtime.py  setup_attrs.py  setup_dataclasses.py  setup_msgspec.py  setup_namedtuples.py  setup_records.py
examples/: __init__.py  _generic_example.py  example_regular.py  example_with_codec.py
record/: __init__.py  records.py
record_type/: __init__.py  _codec.py  records.py
tests/: test_records.py
